--- a/Jaruwat.html
+++ b/Jaruwat.html
@@ -1,3 +1,7 @@
 <center>
-  ICT SU Jaruwat
+  <br>
+    ICT SU Jaruwat
+  <br>
+  <img src="selfie_like_pro_Vscode.png"
+    width="300px" height="200">
 </center>
