--- a/Jaruwat.html
+++ b/Jaruwat.html
@@ -3,5 +3,5 @@
     ICT SU Jaruwat
   <br>
   <img src="selfie_like_pro_Vscode.png"
-    width="1500px" height="1500">
+    width="750px" height="750px">
 </center>
