--- a/Jaruwat.html
+++ b/Jaruwat.html
@@ -1,7 +1,39 @@
-<center>
-  <br>
-    ICT SU Jaruwat
-  <br>
-  <img src="selfie_like_pro_Vscode.png"
-    width="1200px" height="750px">
-</center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ICT SU Jaruwat</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        h1 {
+            font-size: 24px;
+            color: #333;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>ICT SU Jaruwat</h1>
+        <img src="selfie_like_pro_Vscode.png" alt="Selfie" width="600px">
+    </div>
+</body>
+</html>
